-------------------------
* webhelpers.constants:
  - Fix spelling of Massachusetts.
* webhelpers.feedgenerator:
  - Sync with Django rev 11910. This adds GeoRSS and makes the API more
    extensible, as well as fixing a few bugs.
    (Re-added the Atom1 'published' property.)
    (The 'generator' and 'source' properties were lost, but they weren't
    working correctly anyway.)
* webhelpers.html:
  - New ``HTML.cdata()`` method for producing "<!![CDATA[ ... ]]>" sections.
  - The basic tag builders (``HTML.a()`` and ``HTML.tag("a")``) now have a
    ``_nl`` arg which, if true, inserts a newline between content elements
    and at the end of the tag for readability.  Example:  
        HTML.a("A", "B", href="/")  =>   '<a href="/">AB</a>'
        HTML.a("A", "B", href="/", _nl=True)   =>   '<a href="/">\nA\nB\n</a>\n'
    This does not affect HTML attributes nor the higher-level tag helpers.
    The exact spacing is subject to change.  The tag building code has been
    refactored to accommodate this.
* webhelpers.html.tags:
  - ``form()`` puts its hidden "_method" field in a '<div style="display:none">'
    to conform to XHTML syntax. The style prevents the div from being displayed
    or affecting the layout. A new arg ``hidden_fields`` may be a dict or
    iterable of additional hidden fields, which will be added to the div.
  - Set magic ID attribute in ``hidden`` helper to match behavior of the other
    tag helpers.
  - ``image()`` can now calculate the width and height automatically
    from an image file, using either the PIL algorithm or the pure Python
    algorithm in ``webhelpers.media``. It also logs the dimensions to the
    debug log for troubleshooting.
* webhelpers.html.tools:
  - Reimplement ``highlight()`` using the HTML builder. New arguments add
    flexibility.  Deprecate the ``highlighter`` argument, which creates tags
    via string interpolation.
  - Fixed ``auto_link()`` to parse slash characters in query string.